--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     },
     "dependencies": {
         "react": "^16.2.0",
-        "react-dom": "^16.2.0"
+        "react-dom": "^16.2.0",
+        "styled-components": "^3.2.3"
     },
     "scripts": {
         "start": "react-scripts start",
